配置全局less样式

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -1,6 +1,8 @@
-@themePage: #dfdfdf;
-@themeContent: #ffffff;
-@themeItemContent: #ffffff;
+@PageColor: #FBFBFB; //页面背景
+@ContentColor: #FFFFFF; //内容背景
+@ItemContentColor: #FFFFFF; //分块内容背景
+@themeLightColor: #ECF5FF; //主题浅色
+@themeDarkColor: #409EFF; //主题深色
 @TopBtmGapping: 15px;
 @baseMargin: 8px;
 @normalTextFont: 14px;
