添加学生系统导航栏细节

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -16,10 +16,9 @@
 
 @iconSize: 24px; //icon默认大小
 @TopBtmGapping: 15px;
-@normalTextFont: 14px;
-@smallFont: 16px;
-@mediumFont: 20px;
-@bigFont: 24px;
+@smallFont: 0.72rem;
+@mediumFont: 0.80rem;
+@bigFont: 0.96rem;
 .aboundContainer {
   // 充满容器
   width: 100%;
