解决 footer 样式问题

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -42,6 +42,11 @@
   justify-content: space-around;
 }
 
+.flexRowHorCenter {
+  .flexRow();
+  justify-content: center;
+}
+
 .flexRowVerCenter {
   .flexRow();
   align-items: center;
